# obs-frame-interleave-filter

./: CMakeLists.txt
.github/workflows/: main.yml
data/locale/: en-US.ini
doc/: Makefile
packaging/debian/: changelog  control  copyright
packaging/fedora/: obs-studio-plugin-frame-interleave-filter.spec
src/: frame-interleave-filter.c  plugin-macros.h.in  plugin-main.c
